Completata sezione nav (non dinamica e responsive)

--- a/index.html
+++ b/index.html
@@ -15,23 +15,29 @@
 </head>
 <body>
     
-    <nav>
+    <!-- /#site_nav -->
+    <nav id="site_nav">
         <!-- /.container -->
         <div class="container">
-            <!-- /.logo -->
-            <h2 class="logo">Mettere Logo</h2>
+            <!-- Site Logo -->
+            <a href="#">
+                <!-- /.nav_logo -->
+                <img class="nav_logo" src="./assets/img/favicon.png" alt="site_logo">
+            </a>
             <!-- /.search-bar -->
             <div class="search-bar">
                 <!-- /.uil uil-search -->
                 <i class="uil uil-search"></i>
+                <!-- Input per cercare contenuti -->
                 <input type="search" placeholder="Cerca contenuti">
             </div>
             <!-- /.create -->
             <div class="create">
-                <label for="create-post">Create</label>
+                <!-- /.btn btn-primary -->
+                <label class="btn btn-primary" for="create-post">Create</label>
                 <!-- /.profile-picture -->
                 <div class="profile-picture">
-                    <img src="./assets/img/profile-1.jpg" alt="Profile Picture">
+                    <img src="./assets/img/profile-8.jpg" alt="Profile Picture">
                 </div>
             </div>
         </div>
