Creata sidebar laterale con icone, da stilizzare

--- a/index.html
+++ b/index.html
@@ -43,6 +43,76 @@
         </div>
     </nav>
 
+    <!-- /#site_main -->
+    <main id="site_main">
+        <!-- /.container -->
+        <div class="container">
+            <!-- /.left -->
+            <div class="left">
+                <!-- /.profile -->
+                <a href="" class="profile">
+                    <!-- /.profile-picture -->
+                    <div class="profile-picture">
+                        <img src="./assets/img/profile-8.jpg" alt="Profile Picture">
+                    </div>
+                    <!-- /.handle -->
+                    <div class="handle">
+                        <h4>Alessandro</h4>
+                        <!-- /.text-muted -->
+                        <p class="text-muted">@Ale</p>
+                    </div>
+                </a>
+                <!-- /.sidebar -->
+                <div class="sidebar">
+                    <!-- Saranno da generare dinamicamente -->
+                    <!-- /.menu-item active  -->
+                    <a class="menu-item active">
+                        <!-- /.uil uil-home -->
+                        <span><i class="uil uil-home"></i></span> <h3>Home</h3>                                            
+                    </a>
+                    <!-- /.menu-item  -->
+                    <a class="menu-item">
+                        <!-- /.uil uil-compass -->
+                        <span><i class="uil uil-compass"></i></span> <h3>Explore</h3>                                            
+                    </a>
+                    <!-- /.menu-item  -->
+                    <a class="menu-item">
+                        <!-- /.uil uil-bell -->
+                        <span><i class="uil uil-bell"></i></span> <h3>Notifications</h3>                                          
+                    </a>                    
+                    <!-- /.menu-item  -->
+                    <a class="menu-item">
+                        <!-- /.uil uil-envelope-alt -->
+                        <span><i class="uil uil-envelope-alt"></i></span> <h3>Messages</h3>                                           
+                    </a>
+                    <!-- /.menu-item  -->
+                    <a class="menu-item">
+                        <!-- /.uil uil-bookmark -->
+                        <span><i class="uil uil-bookmark"></i></span> <h3>Bookmarks</h3>                                          
+                    </a>
+                    <!-- /.menu-item  -->
+                    <a class="menu-item">
+                        <!-- /.uil uil-chart-line -->
+                        <span><i class="uil uil-chart-line"></i></span> <h3>Analytics</h3>                                         
+                    </a>                                            
+                    <!-- /.menu-item  -->
+                    <a class="menu-item">
+                        <!-- /.uil uil-palette -->
+                        <span><i class="uil uil-palette"></i></span> <h3>Theme</h3>                                         
+                    </a>                                              
+                    <!-- /.menu-item  -->
+                    <a class="menu-item">
+                        <!-- /.uil uil-setting -->
+                        <span><i class="uil uil-setting"></i></span> <h3>Settings</h3>                                      
+                    </a>                                             
+                </div>
+            </div>
+            <!-- /.middle -->    
+            <div class="middle"></div>
+            <!-- /.right -->
+            <div class="right"></div>
+        </div>
+    </main>
 
     <!-- Link a JS -->
     <script src='./assets/js/app.js'></script>
