Iniziato a creare la sezione delle stories.

--- a/index.html
+++ b/index.html
@@ -205,7 +205,77 @@
                 <label for="create-post" class="btn btn-primary">Create Post</label>
             </div>
             <!-- /.middle -->    
-            <div class="middle"></div>
+            <div class="middle">
+                <!-- /.stories #siteStories -->
+                <div id="siteStories" class="stories">
+                    <!-- Son da fare dinamicamente -->
+                    <!-- /.story -->
+                    <div class="story">
+                        <!-- /.profile-picture -->
+                        <div class="profile-picture">
+                            <img src="./assets/img/profile-8.jpg">
+                        </div>
+                        <!-- /.name -->
+                        <p class="name">Your Story</p>
+                    </div>
+                    <!-- /.story -->
+                    <div class="story">
+                        <!-- /.profile-picture -->
+                        <div class="profile-picture">
+                            <img src="./assets/img/profile-9.jpg">
+                        </div>
+                        <!-- /.name -->
+                        <p class="name">Lilla James</p>
+                    </div>
+                    <!-- /.story -->
+                    <div class="story">
+                        <!-- /.profile-picture -->
+                        <div class="profile-picture">
+                            <img src="./assets/img/profile-10.jpg">
+                        </div>
+                        <!-- /.name -->
+                        <p class="name">Winnie Hale</p>
+                    </div>
+                    <!-- /.story -->
+                    <div class="story">
+                        <!-- /.profile-picture -->
+                        <div class="profile-picture">
+                            <img src="./assets/img/profile-11.jpg">
+                        </div>
+                        <!-- /.name -->
+                        <p class="name">Daniel Bale</p>
+                    </div>
+                    <!-- /.story -->
+                    <div class="story">
+                        <!-- /.profile-picture -->
+                        <div class="profile-picture">
+                            <img src="./assets/img/profile-12.jpg">
+                        </div>
+                        <!-- /.name -->
+                        <p class="name">Jane Doe</p>
+                    </div>
+                    <!-- /.story -->
+                    <div class="story">
+                        <!-- /.profile-picture -->
+                        <div class="profile-picture">
+                            <img src="./assets/img/profile-13.jpg">
+                        </div>
+                        <!-- /.name -->
+                        <p class="name">Tina White</p>
+                    </div>                    
+                </div>
+                <!-- /.create-post -->
+                <form class="create-post">
+                    <!-- /.profile-picture -->
+                    <div class="profile-picture">
+                        <img src="./assets/img/profile-8.jpg">
+                    </div>
+                    <!-- /#create-post -->
+                    <input id="create-post" type="text" placeholder="Raccontaci qualcosa, Alessandro">
+                    <!-- /.btn btn-primary -->
+                    <input type="submit" value="Post" class="btn btn-primary">
+                </form>
+            </div>
             <!-- /.right -->
             <div class="right"></div>
         </div>
