Aggiunto un primo posto, iniziato a stilizzare.

--- a/index.html
+++ b/index.html
@@ -275,6 +275,75 @@
                     <!-- /.btn btn-primary -->
                     <input type="submit" value="Post" class="btn btn-primary">
                 </form>
+
+                <!-- /.feeds -->
+                <div class="feeds">
+                    <!-- /.feed (QUESTO DEV'ESSERE DINAMICO) -->
+                    <div class="feed">
+                        <!-- /.head -->
+                        <div class="head">
+                            <!-- /.user -->
+                            <div class="user">
+                                <!-- /.profile-picture -->
+                                <div class="profile-picture">
+                                    <img src="./assets/img/profile-13.jpg">
+                                </div>
+                                <!-- /.ingo -->
+                                <div class="ingo">
+                                    <h3>Lana Rose</h3>
+                                    <small>Dubai, 15 Minuti fa</small>
+                                </div>
+                            </div>
+                            <!-- /.edit -->
+                            <span class="edit">
+                                <!-- /.uil uil-ellipsis-h -->
+                                <i class="uil uil-ellipsis-h"></i>
+                            </span>
+                        </div>
+                        <!-- /.photo -->
+                        <div class="photo">
+                            <img src="./assets/img/feed-1.jpg">
+                        </div>
+                        <!-- /.action-button -->
+                        <div class="action-buttons">
+                            <!-- /.interaction-buttons -->
+                            <div class="interaction-buttons">
+                                <!-- /.uil uil-heart -->
+                                <span><i class="uil uil-heart"></i></span>
+                                <!-- /.uil uil-comment-dots -->
+                                <span><i class="uil uil-comment-dots"></i></span>  
+                                <!-- /.uil uil-share-alt -->
+                                <span><i class="uil uil-share-alt"></i></span>  
+                            </div>
+                            <!-- /.bookmark -->
+                            <div class="bookmark">
+                                <!-- Per farla solid al click : <i class="uis uis-bookmark"></i> -->
+                                <!-- /.uil uil-bookmark-full -->
+                                <span><i class="uil uil-bookmark-full"></i></span>
+                            </div>
+                        </div>
+                        <!-- /.liked-by -->
+                        <div class="liked-by">
+                            <!-- Immagine della gente alla quale piace -->
+                            <span><img src="./assets/img/profile-10.jpg"></span>
+                            <span><img src="./assets/img/profile-4.jpg"></span>
+                            <span><img src="./assets/img/profile-15.jpg"></span>
+                            <p>Liked by <b>Ernest Achivier</b> and <b>2,323 others</b></p>
+                        </div>
+                        <!-- /.caption -->
+                        <div class="caption">
+                            <p>
+                                <b>Lana Rose</b> Lorem ipsum, dolor sit amet consectetur. 
+                                <!-- /.harsh-tag -->
+                                <span class="harsh-tag">#adipisicing.</span>
+                            </p>
+                        </div>
+                        <!-- /.text-muted -->
+                        <div class="text-muted comments">
+                            View all 277 comments
+                        </div>
+                    </div>
+                </div>
             </div>
             <!-- /.right -->
             <div class="right"></div>
