Creata zona DX con i messaggi e le richieste d'amicizia

--- a/index.html
+++ b/index.html
@@ -736,7 +736,71 @@
                 </div>
             </div>
             <!-- /.right -->
-            <div class="right"></div>
+            <div class="right">
+                <!-- /.messages -->
+                <div class="messages">
+                    <!-- /.heading -->
+                    <div class="heading">
+                        <h4>Messaggi</h4> 
+                        <!-- /.uil uil-edit -->
+                        <i class="uil uil-edit"></i>
+                    </div>
+                    <!-- /.search-bar -->
+                    <div class="search-bar">
+                        <!-- /.uil uil-search -->
+                        <i class="uil uil-search"></i>
+                        <!-- /message-search -->
+                        <input type="text" placeholder="Cerca Messaggi" id="message-search">
+                    </div>
+                    <!-- /.category -->
+                    <div class="category">
+                        <!-- /.active -->
+                        <h6 class="active">Primary</h6>
+                        <h6>General</h6>
+                        <!-- /.message-requests -->
+                        <h6 class="message-requests">Requests(7)</h6>
+                    </div>
+                    <!-- /.message -->
+                    <div class="message">
+                        <!-- /.profile-picture -->
+                        <div class="profile-picture">
+                            <img src="./assets/img/profile-17.jpg" >
+                        </div>
+                        <!-- /.message-body -->
+                        <div class="message-body">
+                            <h5>Edem Quist</h5>
+                            <!-- /.text-muted -->
+                            <p class="text-muted">Just Woke up bruh</p>
+                        </div>
+                    </div>
+                    <!-- /.friend-requests -->
+                    <div class="friend-requests">
+                        <h4>Requests</h4>
+                        <!-- /.request -->
+                        <div class="request">
+                            <!-- /.info -->
+                            <div class="info">
+                                <!-- /.profile-picture -->
+                                <div class="profile-picture">
+                                    <img src="./assets/img/profile-15.jpg">
+                                </div>
+                                <div>
+                                    <h5>Haija Bintu</h5>
+                                    <!-- /.text-muted -->
+                                    <p class="text-muted">8 amici in comune</p>
+                                    <!-- /.action -->
+                                    <div class="action">
+                                        <!-- /.btn btn-primary -->
+                                        <button class="btn btn-primary">Accetta</button>
+                                        <!-- /.btn -->
+                                        <button class="btn">Declina</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
