Iniziato ad aggiungere stile alla parte dx con i messaggi e le richieste di amicizia.

--- a/index.html
+++ b/index.html
@@ -752,8 +752,8 @@
                         <!-- /message-search -->
                         <input type="text" placeholder="Cerca Messaggi" id="message-search">
                     </div>
-                    <!-- /.category -->
-                    <div class="category">
+                    <!-- /.categories -->
+                    <div class="categories">
                         <!-- /.active -->
                         <h6 class="active">Primary</h6>
                         <h6>General</h6>
