Aggiunto stile alle richieste di amiciza e ai messaggi in arrivo/letti

--- a/index.html
+++ b/index.html
@@ -760,45 +760,160 @@
                         <!-- /.message-requests -->
                         <h6 class="message-requests">Requests(7)</h6>
                     </div>
-                    <!-- /.message -->
-                    <div class="message">
-                        <!-- /.profile-picture -->
-                        <div class="profile-picture">
-                            <img src="./assets/img/profile-17.jpg" >
-                        </div>
-                        <!-- /.message-body -->
-                        <div class="message-body">
-                            <h5>Edem Quist</h5>
-                            <!-- /.text-muted -->
-                            <p class="text-muted">Just Woke up bruh</p>
-                        </div>
-                    </div>
-                    <!-- /.friend-requests -->
-                    <div class="friend-requests">
-                        <h4>Requests</h4>
-                        <!-- /.request -->
-                        <div class="request">
-                            <!-- /.info -->
-                            <div class="info">
-                                <!-- /.profile-picture -->
-                                <div class="profile-picture">
-                                    <img src="./assets/img/profile-15.jpg">
-                                </div>
-                                <div>
-                                    <h5>Haija Bintu</h5>
-                                    <!-- /.text-muted -->
-                                    <p class="text-muted">8 amici in comune</p>
-                                    <!-- /.action -->
-                                    <div class="action">
-                                        <!-- /.btn btn-primary -->
-                                        <button class="btn btn-primary">Accetta</button>
-                                        <!-- /.btn -->
-                                        <button class="btn">Declina</button>
-                                    </div>
-                                </div>
+                    <!-- /.box-messages -->
+                    <!-- Messaggi interni sono da fare dinamici -->
+                    <div class="box-messages">
+                        <!-- /.message -->
+                        <div class="message">
+                            <!-- /.profile-picture -->
+                            <div class="profile-picture">
+                                <img src="./assets/img/profile-10.jpg" >
+                            </div>
+                            <!-- /.message-body -->
+                            <div class="message-body">
+                                <h5>Edem Quist</h5>
+                                <!-- /.text-muted -->
+                                <p class="text-muted">Just Woke up bruh</p>
                             </div>
                         </div>
+                        <!-- /.message -->
+                        <div class="message">
+                            <!-- /.profile-picture -->
+                            <div class="profile-picture">
+                                <img src="./assets/img/profile-9.jpg" >
+                            </div>
+                            <!-- /.message-body -->
+                            <div class="message-body">
+                                <h5>Franca Delia</h5>
+                                <!-- /.text-bold -->
+                                <p class="text-bold">Received, thanks</p>
+                            </div>
+                        </div>
+                        <!-- /.message -->
+                        <div class="message">
+                            <!-- /.profile-picture -->
+                            <div class="profile-picture">
+                                <img src="./assets/img/profile-12.jpg" >
+                            </div>
+                            <!-- /.message-body -->
+                            <div class="message-body">
+                                <h5>Jane Doe</h5>
+                                <!-- /.text-bold -->
+                                <p class="text-bold">ok</p>
+                            </div>
+                        </div>
+                        <!-- /.message -->
+                        <div class="message">
+                            <!-- /.profile-picture -->
+                            <div class="profile-picture">
+                                <img src="./assets/img/profile-7.jpg" >
+                            </div>
+                            <!-- /.message-body -->
+                            <div class="message-body">
+                                <h5>Daniella Jackson</h5>
+                                <!-- /.text-bold -->
+                                <p class="text-bold">2 new messages</p>
+                            </div>
+                        </div>                    
+                        <!-- /.message -->
+                        <div class="message">
+                            <!-- /.profile-picture -->
+                            <div class="profile-picture">
+                                <img src="./assets/img/profile-5.jpg" >
+                            </div>
+                            <!-- /.message-body -->
+                            <div class="message-body">
+                                <h5>Juliet Makarey</h5>
+                                <!-- /.text-muted -->
+                                <p class="text-muted">lol u right</p>
+                            </div>
+                        </div>
+                        <!-- /.message -->
+                        <div class="message">
+                            <!-- /.profile-picture -->
+                            <div class="profile-picture">
+                                <img src="./assets/img/profile-3.jpg" >
+                                <!-- /.active -->
+                                <div class="active"></div>
+                            </div>
+                            <!-- /.message-body -->
+                            <div class="message-body">
+                                <h5>Chantel Msiza</h5>
+                                <!-- /.text-bold -->
+                                <p class="text-bold">Birthday Tomorrow!</p>
+                            </div>
+                        </div> 
                     </div>
+                </div>
+                <!-- /.friend-requests -->
+                <div class="friend-requests">
+                    <h4>Requests</h4>
+                    <!-- /.request -->
+                    <div class="request">
+                        <!-- /.info -->
+                        <div class="info">
+                            <!-- /.profile-picture -->
+                            <div class="profile-picture">
+                                <img src="./assets/img/profile-15.jpg">
+                            </div>
+                            <div>
+                                <h5>Haija Bintu</h5>
+                                <!-- /.text-muted -->
+                                <p class="text-muted">8 amici in comune</p>
+                            </div>
+                        </div>
+                        <!-- /.action -->
+                        <div class="action">
+                            <!-- /.btn btn-primary -->
+                            <button class="btn btn-primary">Accetta</button>
+                            <!-- /.btn -->
+                            <button class="btn">Declina</button>
+                        </div>
+                    </div>
+                    <!-- /.request -->
+                    <div class="request">
+                        <!-- /.info -->
+                        <div class="info">
+                            <!-- /.profile-picture -->
+                            <div class="profile-picture">
+                                <img src="./assets/img/profile-11.jpg">
+                            </div>
+                            <div>
+                                <h5>Jackline Mensah</h5>
+                                <!-- /.text-muted -->
+                                <p class="text-muted">2 amici in comune</p>
+                            </div>
+                        </div>
+                        <!-- /.action -->
+                        <div class="action">
+                            <!-- /.btn btn-primary -->
+                            <button class="btn btn-primary">Accetta</button>
+                            <!-- /.btn -->
+                            <button class="btn">Declina</button>
+                        </div>
+                    </div>
+                    <!-- /.request -->
+                    <div class="request">
+                        <!-- /.info -->
+                        <div class="info">
+                            <!-- /.profile-picture -->
+                            <div class="profile-picture">
+                                <img src="./assets/img/profile-1.jpg">
+                            </div>
+                            <div>
+                                <h5>Jennifer Lawrence</h5>
+                                <!-- /.text-muted -->
+                                <p class="text-muted">19 amici in comune</p>
+                            </div>
+                        </div>
+                        <!-- /.action -->
+                        <div class="action">
+                            <!-- /.btn btn-primary -->
+                            <button class="btn btn-primary">Accetta</button>
+                            <!-- /.btn -->
+                            <button class="btn">Declina</button>
+                        </div>
+                    </div>                                        
                 </div>
             </div>
         </div>
