Iniziato a creare nuovo file per la modale. Aggiunto nuovi file javascript con collegamenti.
Aggiunti nuovi file javascript

--- a/index.html
+++ b/index.html
@@ -919,7 +919,81 @@
         </div>
     </main>
 
+    <!-- /.customize-theme -->
+    <div class="customize-theme">
+        <!-- /.card -->
+        <div class="card">
+            <h2>Modifica la visualizzazione</h2>
+            <p>Modifica la dimensione del testo, colore o background</p>
+            <!-- /.font-size -->
+            <div class="font-size">
+                <h4>Font Size</h4>
+                <div>
+                    <h6>Aa</h6>
+                    <!-- /.choose-size -->
+                    <div class="choose-size">
+                        <!-- /.font-size-1 -->
+                        <span class="font-size-1"></span>
+                        <!-- /.font-size-2 -->
+                        <span class="font-size-2"></span>
+                        <!-- /.font-size-3 -->
+                        <span class="font-size-3"></span>
+                        <!-- /.font-size-4 -->
+                        <span class="font-size-4"></span>
+                        <!-- /.font-size-5 -->
+                        <span class="font-size-5"></span>
+                    </div>
+                    <h3>Aa</h3>
+                </div>
+            </div>
+            <!-- /.color -->
+            <div class="color">
+                <h4>Color</h4>
+                <!-- /.choose-color -->
+                <div class="choose-color">
+                    <!-- /.color-1 active -->
+                    <span class="color-1 active"></span>
+                    <!-- /.color-2 -->
+                    <span class="color-2"></span>
+                    <!-- /.color-3 -->
+                    <span class="color-3"></span>
+                    <!-- /.color-4 -->
+                    <span class="color-4"></span>
+                    <!-- /.color-5 -->
+                    <span class="color-5"></span>
+                </div>
+            </div>
+            <!-- /.background -->
+            <div class="background">
+                <h4></h4>
+                <!-- /.choose-bg -->
+                <div class="choose-bg">
+                    <!-- /.bg-1 -->
+                    <div class="bg-1">
+                        <span></span>
+                        <!-- /.bg-1 -->
+                        <h5 for="bg-1"></h5>
+                    </div>
+                    <!-- /.bg-2 -->
+                    <div class="bg-2">
+                        <span></span>
+                        <h5>Dim</h5>
+                    </div>
+                    <!-- /.bg-3 -->
+                    <div class="bg-3">
+                        <span></span>
+                        <!-- /.bg-3 -->
+                        <h5 for="bg-3"></h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+
+    <!-- Link alla mia Modale -->
+    <script src="./assets/js/modal.js"></script>
     <!-- Link a JS -->
-    <script src='./assets/js/app.js'></script>
+    <script type="module" src='./assets/js/app.js'></script>
 </body>
 </html>
